test: refactor test code (#43)
* test: refactor test code

* test: reduce console noise at tests

* test: additional tests cleanup

* test: remove empty lines at Day15Test

* test: reorder qualifiers