@@ -17,7 +17,7 @@ class MirrorTileTest {
         List<Vector2> directions = left.nextDirections(Vector2.right());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
         assertEquals(0, direction.getX());
         assertEquals(1, direction.getY());
     }
@@ -27,7 +27,7 @@ class MirrorTileTest {
         List<Vector2> directions = left.nextDirections(Vector2.left());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(0, direction.getX());
         assertEquals(-1, direction.getY());
@@ -39,7 +39,7 @@ class MirrorTileTest {
         List<Vector2> directions = left.nextDirections(Vector2.down());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(-1, direction.getX());
         assertEquals(0, direction.getY());
@@ -51,7 +51,7 @@ class MirrorTileTest {
         List<Vector2> directions = left.nextDirections(Vector2.up());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(1, direction.getX());
         assertEquals(0, direction.getY());
@@ -64,7 +64,7 @@ class MirrorTileTest {
         List<Vector2> directions = right.nextDirections(Vector2.right());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(0, direction.getX());
         assertEquals(-1, direction.getY());
@@ -75,7 +75,7 @@ class MirrorTileTest {
         List<Vector2> directions = right.nextDirections(Vector2.left());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(0, direction.getX());
         assertEquals(1, direction.getY());
@@ -87,7 +87,7 @@ class MirrorTileTest {
         List<Vector2> directions = right.nextDirections(Vector2.down());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(1, direction.getX());
         assertEquals(0, direction.getY());
@@ -99,7 +99,7 @@ class MirrorTileTest {
         List<Vector2> directions = right.nextDirections(Vector2.up());
 
         assertEquals(1, directions.size());
-        Vector2 direction = directions.get(0);
+        Vector2 direction = directions.getFirst();
 
         assertEquals(-1, direction.getX());
         assertEquals(0, direction.getY());
